--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0671.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0671.html
@@ -84,9 +84,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 1394 1724 1453">
-        <span id="w_14" class="ocr_word" title="bbox 131 1397 164 1453" lang="grc">
+        <span id="w_14_0" class="ocr_word" title="bbox 131 1397 164 1453">
           <span class="alternatives">
-            <ins title="nlp 2.00">β'</ins>
+            <ins class="alt" title="nlp 2.00">β΄</ins>
+          </span>
+        </span>
+        <span id="w_14_1" class="ocr_word" title="bbox 131 1397 164 1453">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 237 1397 443 1451" lang="grc">
@@ -114,16 +119,16 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 1671 1415 1724 1418">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 131 1459 1723 1520">
-        <span id="w_21" class="ocr_word" title="bbox 131 1466 169 1520" lang="grc">
+        <span id="w_21_0" class="ocr_word" title="bbox 131 1466 169 1520">
           <span class="alternatives">
-            <ins title="nlp 2.00">γ'</ins>
+            <ins class="alt" title="nlp 2.00">γ΄</ins>
+          </span>
+        </span>
+        <span id="w_21_1" class="ocr_word" title="bbox 131 1466 169 1520">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 239 1466 294 1509" lang="grc">
@@ -166,11 +171,6 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 1671 1483 1723 1486">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 87 1527 1725 1587">
         <span id="w_31" class="ocr_word" title="bbox 87 1549 105 1579">
@@ -178,9 +178,14 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 134 1534 169 1575">
+        <span id="w_32_0" class="ocr_word" title="bbox 134 1534 169 1575">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ'</ins>
+            <ins class="alt" title="nlp 2.00">δ΄</ins>
+          </span>
+        </span>
+        <span id="w_32_1" class="ocr_word" title="bbox 134 1534 169 1575">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 243 1549 316 1578" lang="grc">
@@ -223,16 +228,11 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1673 1551 1725 1554">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 772 1733 1144 1790">
         <span id="w_42" class="ocr_word" title="bbox 772 1733 875 1790">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Υλη</ins>
+            <ins title="nlp 2.00">Υλη</ins>
           </span>
         </span>
         <span id="w_43" class="ocr_word" title="bbox 914 1751 1144 1789" lang="grc">
@@ -279,9 +279,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 134 1952 1679 2010">
-        <span id="w_50" class="ocr_word" title="bbox 134 1954 167 2010" lang="grc">
+        <span id="w_50_0" class="ocr_word" title="bbox 134 1954 167 2010">
           <span class="alternatives">
-            <ins title="nlp 2.00">β'</ins>
+            <ins class="alt" title="nlp 2.00">β΄</ins>
+          </span>
+        </span>
+        <span id="w_50_1" class="ocr_word" title="bbox 134 1954 167 2010">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 237 1954 439 2008" lang="grc">
@@ -309,16 +314,16 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 1627 1970 1679 1973">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 132 2014 1682 2076">
-        <span id="w_57" class="ocr_word" title="bbox 132 2022 163 2076">
+        <span id="w_57_0" class="ocr_word" title="bbox 132 2022 163 2076">
           <span class="alternatives">
-            <ins title="nlp 2.00">Υ'</ins>
+            <ins class="alt" title="nlp 2.00">γ΄</ins>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 132 2022 163 2076">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 237 2023 291 2066" lang="grc">
@@ -361,11 +366,6 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 1628 2037 1682 2041">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 69 2084 1681 2144">
         <span id="w_67" class="ocr_word" title="bbox 69 2106 107 2134">
@@ -373,9 +373,14 @@
             <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
-        <span id="w_69" class="ocr_word" title="bbox 239 2094 313 2134" lang="grc">
+        <span id="w_69_0" class="ocr_word" title="bbox 239 2094 313 2134">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ'</ins>
+            <ins class="alt" title="nlp 2.00">δ΄</ins>
+          </span>
+        </span>
+        <span id="w_69_1" class="ocr_word" title="bbox 239 2094 313 2134">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 329 2093 533 2144" lang="grc">
@@ -413,16 +418,11 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_77" class="ocr_word" title="bbox 1629 2105 1681 2109">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 779 2290 1140 2346">
         <span id="w_78" class="ocr_word" title="bbox 779 2290 881 2346">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Υλη</ins>
+            <ins title="nlp 2.00">Υλη</ins>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 918 2291 1140 2334" lang="grc">
@@ -449,9 +449,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 137 2510 611 2566">
-        <span id="w_83" class="ocr_word" title="bbox 137 2510 170 2566" lang="grc">
+        <span id="w_83_0" class="ocr_word" title="bbox 137 2510 170 2566">
           <span class="alternatives">
-            <ins title="nlp 2.00">β'</ins>
+            <ins class="alt" title="nlp 2.00">β΄</ins>
+          </span>
+        </span>
+        <span id="w_83_1" class="ocr_word" title="bbox 137 2510 170 2566">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 238 2512 443 2566" lang="grc">
@@ -459,16 +464,16 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_85" class="ocr_word" title="bbox 558 2535 611 2538">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 133 2578 611 2633">
-        <span id="w_86" class="ocr_word" title="bbox 133 2578 167 2633" lang="grc">
+        <span id="w_86_0" class="ocr_word" title="bbox 133 2578 167 2633">
           <span class="alternatives">
-            <ins title="nlp 2.00">Υ'</ins>
+            <ins class="alt" title="nlp 2.00">γ΄</ins>
+          </span>
+        </span>
+        <span id="w_86_1" class="ocr_word" title="bbox 133 2578 167 2633">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 238 2581 293 2623" lang="grc">
@@ -481,11 +486,6 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_89" class="ocr_word" title="bbox 558 2603 611 2606">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 65 2647 609 2704">
         <span id="w_90" class="ocr_word" title="bbox 65 2660 106 2693">
@@ -493,9 +493,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_91" class="ocr_word" title="bbox 132 2647 165 2704" lang="grc">
+        <span id="w_91_0" class="ocr_word" title="bbox 132 2647 165 2704">
           <span class="alternatives">
-            <ins title="nlp 2.00">Υ'</ins>
+            <ins class="alt" title="nlp 2.00">γ΄</ins>
+          </span>
+        </span>
+        <span id="w_91_1" class="ocr_word" title="bbox 132 2647 165 2704">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_92" class="ocr_word" title="bbox 238 2663 312 2692" lang="grc">
@@ -506,11 +511,6 @@
         <span id="w_93" class="ocr_word" title="bbox 332 2650 535 2702" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
-          </span>
-        </span>
-        <span id="w_94" class="ocr_word" title="bbox 557 2671 609 2674">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
       </span>
@@ -670,9 +670,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 138 3066 674 3123">
-        <span id="w_123" class="ocr_word" title="bbox 138 3066 173 3123" lang="grc">
+        <span id="w_123_0" class="ocr_word" title="bbox 138 3066 173 3123">
           <span class="alternatives">
-            <ins title="nlp 2.00">β'</ins>
+            <ins class="alt" title="nlp 2.00">β΄</ins>
+          </span>
+        </span>
+        <span id="w_123_1" class="ocr_word" title="bbox 138 3066 173 3123">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 240 3068 443 3122" lang="grc">
@@ -685,16 +690,16 @@
             <ins title="nlp 2.00">—</ins>
           </span>
         </span>
-        <span id="w_126" class="ocr_word" title="bbox 621 3089 674 3094">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 137 3133 770 3190">
-        <span id="w_127" class="ocr_word" title="bbox 137 3134 170 3190" lang="grc">
+        <span id="w_127_0" class="ocr_word" title="bbox 137 3134 170 3190">
           <span class="alternatives">
-            <ins title="nlp 2.00">Υ'</ins>
+            <ins class="alt" title="nlp 2.00">γ΄</ins>
+          </span>
+        </span>
+        <span id="w_127_1" class="ocr_word" title="bbox 137 3134 170 3190">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 240 3137 365 3179" lang="grc">
@@ -707,11 +712,6 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_130" class="ocr_word" title="bbox 628 3133 770 3188" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βαδίζει</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 66 3202 721 3257">
         <span id="w_131" class="ocr_word" title="bbox 66 3218 109 3249">
@@ -719,9 +719,14 @@
             <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 136 3202 165 3244" lang="grc">
+        <span id="w_132_0" class="ocr_word" title="bbox 136 3202 165 3244">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ'</ins>
+            <ins class="alt" title="nlp 2.00">δ΄</ins>
+          </span>
+        </span>
+        <span id="w_132_1" class="ocr_word" title="bbox 136 3202 165 3244">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_133" class="ocr_word" title="bbox 238 3219 281 3244" lang="grc">
@@ -739,11 +744,6 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 668 3225 721 3229">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 1027 2994 1784 3038">
         <span id="w_137" class="ocr_word" title="bbox 1027 3010 1071 3034" lang="grc">
@@ -756,19 +756,19 @@
             <ins class="alt" title="nlp 1.00">βαδίσει</ins>
           </span>
         </span>
-        <span id="w_139" class="ocr_word" title="bbox 1353 3014 1404 3019">
+        <span id="w_139_0" class="ocr_word" title="bbox 1353 3014 1404 3019">
           <span class="alternatives">
-            <ins title="nlp 2.00">1</ins>
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_139_1" class="ocr_word" title="bbox 1353 3014 1404 3019">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1507 3003 1576 3028" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐκ</ins>
-          </span>
-        </span>
-        <span id="w_141" class="ocr_word" title="bbox 1613 2996 1784 3026" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐβάδισεν</ins>
           </span>
         </span>
       </span>
