--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0591.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0591.html
@@ -57,9 +57,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 166 286 967 332">
-        <span id="w_9" class="ocr_word" title="bbox 166 292 322 327" lang="grc">
+        <span id="w_9_0" class="ocr_word" title="bbox 166 292 322 327">
           <span class="alternatives">
-            <ins title="nlp 2.00">πλάτωνι</ins>
+            <ins class="alt" title="nlp 2.00">Πλάτωνι</ins>
+          </span>
+        </span>
+        <span id="w_9_1" class="ocr_word" title="bbox 166 292 322 327">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 349 288 498 324" lang="grc">
@@ -80,11 +85,6 @@
         <span id="w_13" class="ocr_word" title="bbox 720 287 813 328" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἰδέαι)</ins>
-          </span>
-        </span>
-        <span id="w_14" class="ocr_word" title="bbox 844 286 967 325">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">134,28</ins>
           </span>
         </span>
       </span>
@@ -399,9 +399,14 @@
             <ins title="nlp 2.00">Λυκοπολίτης</ins>
           </span>
         </span>
-        <span id="w_77" class="ocr_word" title="bbox 934 897 968 904">
+        <span id="w_77_0" class="ocr_word" title="bbox 934 897 968 904">
           <span class="alternatives">
-            <ins title="nlp 2.00">..</ins>
+            <ins class="alt" title="nlp 2.00">.</ins>
+          </span>
+        </span>
+        <span id="w_77_1" class="ocr_word" title="bbox 934 897 968 904">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">.</ins>
           </span>
         </span>
       </span>
@@ -690,9 +695,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 98 1518 969 1568">
-        <span id="w_131" class="ocr_word" title="bbox 98 1522 343 1568" lang="grc">
+        <span id="w_131_0" class="ocr_word" title="bbox 98 1522 343 1568">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πυθαγόπας</ins>
+            <ins class="alt" title="nlp 2.00">Πυθαγόρας</ins>
+          </span>
+        </span>
+        <span id="w_131_1" class="ocr_word" title="bbox 98 1522 343 1568">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 382 1521 640 1565">
@@ -701,14 +711,9 @@
             <del title="nlp 0.90">philosophiam</del>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 681 1518 842 1552">
+        <span id="w_133_0" class="ocr_word" title="bbox 681 1518 842 1552">
           <span class="alternatives">
-            <ins title="nlp 2.00">defininit</ins>
-          </span>
-        </span>
-        <span id="w_135" class="ocr_word" title="bbox 931 1518 969 1550">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">8,19</ins>
+            <ins class="alt" title="nlp 2.00">definivit</ins>
           </span>
         </span>
       </span>
@@ -1294,14 +1299,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1042 636 1372 679">
-        <span id="w_247" class="ocr_word" title="bbox 1042 636 1174 671" lang="grc">
+        <span id="w_247_0" class="ocr_word" title="bbox 1042 636 1174 671">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΙΙυθία</ins>
+            <ins class="alt" title="nlp 2.00">Πυθία</ins>
           </span>
         </span>
-        <span id="w_248" class="ocr_word" title="bbox 1205 636 1372 679">
+        <span id="w_247_1" class="ocr_word" title="bbox 1042 636 1174 671">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">16,26.32</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1399,14 +1404,14 @@
             <ins class="alt" title="nlp 1.00">Σίμων</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 1203 931 1387 970" lang="grc">
+        <span id="w_266_0" class="ocr_word" title="bbox 1203 931 1387 970">
           <span class="alternatives">
-            <ins title="nlp 2.00">(σκευτεύς)</ins>
+            <ins class="alt" title="nlp 2.00">(σκευτεύς)</ins>
           </span>
         </span>
-        <span id="w_267" class="ocr_word" title="bbox 1413 929 1515 969">
+        <span id="w_266_1" class="ocr_word" title="bbox 1203 931 1387 970">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">42,27</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1455,19 +1460,19 @@
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
-        <span id="w_274" class="ocr_word" title="bbox 1504 1102 1676 1141" lang="grc">
+        <span id="w_274_0" class="ocr_word" title="bbox 1504 1102 1676 1141">
           <span class="alternatives">
-            <ins title="nlp 2.00">Στωϊκοῦς</ins>
+            <ins class="alt" title="nlp 2.00">Στωϊκοὺς</ins>
+          </span>
+        </span>
+        <span id="w_274_1" class="ocr_word" title="bbox 1504 1102 1676 1141">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_275" class="ocr_word" title="bbox 1701 1104 1837 1149" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μεγίστη</ins>
-          </span>
-        </span>
-        <span id="w_276" class="ocr_word" title="bbox 1865 1115 1913 1136" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἔνδειά</ins>
           </span>
         </span>
       </span>
@@ -1745,9 +1750,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1036 1807 1640 1856">
-        <span id="w_325" class="ocr_word" title="bbox 1036 1809 1184 1848" lang="grc">
+        <span id="w_325_0" class="ocr_word" title="bbox 1036 1809 1184 1848">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἵλλος</ins>
+            <ins class="alt" title="nlp 2.00">Ὕλλος</ins>
+          </span>
+        </span>
+        <span id="w_325_1" class="ocr_word" title="bbox 1036 1809 1184 1848">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 1211 1810 1242 1853" lang="grc">
@@ -1758,11 +1768,6 @@
         <span id="w_327" class="ocr_word" title="bbox 1265 1808 1489 1856" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ἡρακλέους)</ins>
-          </span>
-        </span>
-        <span id="w_328" class="ocr_word" title="bbox 1520 1807 1640 1849">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">127,27</ins>
           </span>
         </span>
       </span>
