--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0592.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0592.html
@@ -74,9 +74,14 @@
             <ins class="alt" title="nlp 2.00">.</ins>
           </span>
         </span>
-        <span id="w_17" class="ocr_word" title="bbox 756 967 950 976">
+        <span id="w_17_0" class="ocr_word" title="bbox 756 967 950 976">
           <span class="alternatives">
-            <ins title="nlp 2.00">. . .</ins>
+            <ins class="alt" title="nlp 2.00">.</ins>
+          </span>
+        </span>
+        <span id="w_17_1" class="ocr_word" title="bbox 756 967 950 976">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 996 940 1098 981">
@@ -290,7 +295,7 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 690 1531 714 1563">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">0</ins>
+            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 751 1557 948 1565">
