--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0620.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0620.html
@@ -521,9 +521,14 @@
             <ins class="alt" title="nlp 1.00">τί</ins>
           </span>
         </span>
-        <span id="w_98" class="ocr_word" title="bbox 577 697 749 738" lang="grc">
+        <span id="w_98_0" class="ocr_word" title="bbox 577 697 749 738">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαιρέσεως,</ins>
+            <ins class="alt" title="nlp 2.00">διαφέρει</ins>
+          </span>
+        </span>
+        <span id="w_98_1" class="ocr_word" title="bbox 577 697 749 738">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 779 699 846 737" lang="grc">
@@ -549,11 +554,6 @@
         <span id="w_103" class="ocr_word" title="bbox 1359 686 1505 740" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεωρίᾳ</ins>
-          </span>
-        </span>
-        <span id="w_104" class="ocr_word" title="bbox 1537 688 1813 741" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μαθησόμεθα.</ins>
           </span>
         </span>
       </span>
@@ -1748,9 +1748,9 @@
             <ins class="alt" title="nlp 1.00">οὖσαν</ins>
           </span>
         </span>
-        <span id="w_334" class="ocr_word" title="bbox 1967 2329 2066 2385" lang="grc">
+        <span id="w_334_0" class="ocr_word" title="bbox 1967 2329 2066 2385">
           <span class="alternatives">
-            <ins title="nlp 2.00">[καὶ]</ins>
+            <ins class="alt" title="nlp 2.00">[καὶ]</ins>
           </span>
         </span>
       </span>
@@ -1767,7 +1767,7 @@
         </span>
         <span id="w_337" class="ocr_word" title="bbox 697 2416 721 2454" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 753 2403 872 2455" lang="grc">
