--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0534.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0534.html
@@ -142,11 +142,6 @@
             <ins class="alt" title="nlp 2.00">οἵ</ins>
           </span>
         </span>
-        <span id="w_23_0" class="ocr_word" title="bbox 663 261 786 303">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">οἵ</ins>
-          </span>
-        </span>
         <span id="w_23_1" class="ocr_word" title="bbox 663 261 786 303">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τε</ins>
@@ -167,9 +162,14 @@
             <ins class="alt" title="nlp 1.00">δηλοῖ</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 1432 262 1499 307" lang="grc">
+        <span id="w_27_0" class="ocr_word" title="bbox 1432 262 1499 307">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰς</ins>
+            <ins class="alt" title="nlp 2.00">τὰς</ins>
+          </span>
+        </span>
+        <span id="w_27_1" class="ocr_word" title="bbox 1432 262 1499 307">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">συστατικάς.</ins>
           </span>
         </span>
       </span>
@@ -791,9 +791,9 @@
             <ins title="nlp 2.00">συμβεβηκότος</ins>
           </span>
         </span>
-        <span id="w_151" class="ocr_word" title="bbox 2077 1550 2165 1585">
+        <span id="w_151_0" class="ocr_word" title="bbox 2077 1550 2165 1585">
           <span class="alternatives">
-            <ins title="nlp 2.00">200ν</ins>
+            <ins class="alt" title="nlp 2.00">200v</ins>
           </span>
         </span>
       </span>
@@ -1145,7 +1145,7 @@
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1995 1978 2107 2014" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατη-</ins>
+            <ins title="nlp 2.00">κατηγοροῦνται</ins>
           </span>
         </span>
       </span>
