--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0672.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0672.html
@@ -25,8 +25,7 @@
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1057 122 1099 154">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IX</ins>
-            <del title="nlp 0.90">IX</del>
+            <ins title="nlp 2.00">ΙΝ</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 1130 122 1165 155">
@@ -77,9 +76,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 428 461 967 519">
-        <span id="w_11" class="ocr_word" title="bbox 428 461 462 519" lang="grc">
+        <span id="w_11_0" class="ocr_word" title="bbox 428 461 462 519">
           <span class="alternatives">
-            <ins title="nlp 2.00">β'</ins>
+            <ins class="alt" title="nlp 2.00">β΄</ins>
+          </span>
+        </span>
+        <span id="w_11_1" class="ocr_word" title="bbox 428 461 462 519">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 528 466 731 518" lang="grc">
@@ -92,11 +96,6 @@
             <ins title="nlp 2.00">—</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 920 489 967 493">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 380 598 999 654">
         <span id="w_15" class="ocr_word" title="bbox 380 613 399 644">
@@ -104,9 +103,14 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 427 598 458 640" lang="grc">
+        <span id="w_16_0" class="ocr_word" title="bbox 427 598 458 640">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ'</ins>
+            <ins class="alt" title="nlp 2.00">δ΄</ins>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 427 598 458 640">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 534 616 578 640" lang="grc">
@@ -122,11 +126,6 @@
         <span id="w_19" class="ocr_word" title="bbox 697 600 901 654" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 947 625 999 629">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
       </span>
@@ -186,12 +185,7 @@
       <span class="ocr_line" title="bbox 427 977 861 1034">
         <span id="w_30" class="ocr_word" title="bbox 427 977 631 1031" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄνθρωπος</ins>
-          </span>
-        </span>
-        <span id="w_31" class="ocr_word" title="bbox 647 1016 662 1034">
-          <span class="alternatives">
-            <ins title="nlp 2.00">.</ins>
+            <ins class="alt" title="nlp 2.00">ἄνθρωπος.</ins>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 676 1002 729 1005">
@@ -290,25 +284,23 @@
           </span>
         </span>
       </span>
-      <span class="ocr_line" title="bbox 2216 1213 2267 1270">
-        <span id="w_49" class="ocr_word" title="bbox 2216 1213 2267 1270">
+      <span class="ocr_line" title="bbox 2216 1213 2267 1270"/>
+      <span class="ocr_line" title="bbox 2086 1302 2164 1331">
+        <span id="w_50_0" class="ocr_word" title="bbox 2086 1302 2164 1331">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">J:</ins>
-            <del title="nlp 0.90">J:</del>
+            <ins class="alt" title="nlp 2.00">f.</ins>
           </span>
         </span>
-      </span>
-      <span class="ocr_line" title="bbox 2086 1302 2164 1331">
-        <span id="w_50" class="ocr_word" title="bbox 2086 1302 2164 1331">
+        <span id="w_50_1" class="ocr_word" title="bbox 2086 1302 2164 1331">
           <span class="alternatives">
-            <ins title="nlp 2.00">f.82r</ins>
+            <ins class="alt" title="nlp 2.00">82r</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 858 1429 962 1460">
-        <span id="w_51" class="ocr_word" title="bbox 858 1429 962 1460" lang="grc">
+        <span id="w_51_0" class="ocr_word" title="bbox 858 1429 962 1460">
           <span class="alternatives">
-            <ins title="nlp 2.00">αδίζει</ins>
+            <ins class="alt" title="nlp 2.00">ιδίζει</ins>
           </span>
         </span>
       </span>
