--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0673.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0673.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 553 130 1870 170">
         <span id="w_0" class="ocr_word" title="bbox 553 130 779 164">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">STEPIIANI</ins>
-            <del title="nlp 0.90">STEPIIANI</del>
+            <ins title="nlp 2.00">STERHANI</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 809 131 848 164">
@@ -44,14 +43,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 864 378 1155 434">
-        <span id="w_6" class="ocr_word" title="bbox 864 378 884 434" lang="grc">
+        <span id="w_6_0" class="ocr_word" title="bbox 864 378 884 434">
           <span class="alternatives">
-            <ins title="nlp 2.00">β &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">β#x772;</ins>
           </span>
         </span>
-        <span id="w_7" class="ocr_word" title="bbox 916 396 1155 434" lang="grc">
+        <span id="w_6_1" class="ocr_word" title="bbox 864 378 884 434">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τμήματος</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -71,19 +70,19 @@
             <ins class="alt" title="nlp 2.00">θεῷ</ins>
           </span>
         </span>
-        <span id="w_10_1" class="ocr_word" title="bbox 796 505 886 544">
+        <span id="w_10_1_0" class="ocr_word" title="bbox 796 505 886 544">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">αί</ins>
+            <ins class="alt" title="nlp 2.00">αἱ</ins>
+          </span>
+        </span>
+        <span id="w_10_1_1" class="ocr_word" title="bbox 796 505 886 544">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 918 521 961 545" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐκ </ins>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 995 505 1042 544" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γ &amp;#x772; προσκατηγορουμένου.</ins>
           </span>
         </span>
       </span>
@@ -113,9 +112,9 @@
             <ins class="alt" title="nlp 1.00">ὑποκείμενος</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1745 604 1835 658" lang="grc">
+        <span id="w_18_0" class="ocr_word" title="bbox 1745 604 1835 658">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; καὶ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ</ins>
           </span>
         </span>
       </span>
@@ -125,9 +124,9 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 804 673 1218 729" lang="grc">
+        <span id="w_20_0" class="ocr_word" title="bbox 804 673 1218 729">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατηγορούμενος &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορούμενος&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -535,14 +534,14 @@
             <ins title="nlp 2.00">15</ins>
           </span>
         </span>
-        <span id="w_91" class="ocr_word" title="bbox 810 1889 830 1926">
+        <span id="w_91_0" class="ocr_word" title="bbox 810 1889 830 1926">
           <span class="alternatives">
-            <ins title="nlp 2.00">γ &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">γ#x772;</ins>
           </span>
         </span>
-        <span id="w_92" class="ocr_word" title="bbox 861 1880 1395 1926" lang="grc">
+        <span id="w_91_1" class="ocr_word" title="bbox 810 1889 830 1926">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσκατηγορουμένου·</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -844,9 +843,9 @@
             <ins class="alt" title="nlp 1.00">ἔσται</ins>
           </span>
         </span>
-        <span id="w_140" class="ocr_word" title="bbox 1771 2599 1849 2638" lang="grc">
+        <span id="w_140_0" class="ocr_word" title="bbox 1771 2599 1849 2638">
           <span class="alternatives">
-            <ins title="nlp 2.00">κτλ·</ins>
+            <ins class="alt" title="nlp 2.00">κτλ.</ins>
           </span>
         </span>
       </span>
@@ -923,19 +922,19 @@
             <ins class="alt" title="nlp 1.00">ἔσται</ins>
           </span>
         </span>
-        <span id="w_155" class="ocr_word" title="bbox 1737 2908 1815 2946" lang="grc">
+        <span id="w_155_0" class="ocr_word" title="bbox 1737 2908 1815 2946">
           <span class="alternatives">
-            <ins title="nlp 2.00">κτλ·</ins>
+            <ins class="alt" title="nlp 2.00">κτλ.</ins>
+          </span>
+        </span>
+        <span id="w_155_1" class="ocr_word" title="bbox 1737 2908 1815 2946">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1846 2917 1863 2941">
           <span class="alternatives">
             <ins title="nlp 2.00">f.</ins>
-          </span>
-        </span>
-        <span id="w_157" class="ocr_word" title="bbox 1877 2914 1924 2941">
-          <span class="alternatives">
-            <ins title="nlp 2.00">83r</ins>
           </span>
         </span>
       </span>
