--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0674.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0674.html
@@ -17,14 +17,12 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 737 89 963 125">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">STEPIIANI</ins>
-            <del title="nlp 0.90">STEPIIANI</del>
+            <ins title="nlp 2.00">STEPHANI</ins>
           </span>
         </span>
         <span id="w_2" class="ocr_word" title="bbox 992 89 1035 122">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IX</ins>
-            <del title="nlp 0.90">IX</del>
+            <ins title="nlp 2.00">IN</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 1062 90 1099 122">
@@ -561,19 +559,19 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_103" class="ocr_word" title="bbox 1066 2287 1088 2324">
+        <span id="w_103_0" class="ocr_word" title="bbox 1066 2287 1088 2324">
           <span class="alternatives">
-            <ins title="nlp 2.00">γ &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">γ#x772;</ins>
+          </span>
+        </span>
+        <span id="w_103_1" class="ocr_word" title="bbox 1066 2287 1088 2324">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1118 2285 1662 2326" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προσκατηγορουμένου</ins>
-          </span>
-        </span>
-        <span id="w_105" class="ocr_word" title="bbox 1695 2284 2003 2325" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καταφάσεων</ins>
           </span>
         </span>
       </span>
