--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0535.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0535.html
@@ -652,9 +652,14 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_122" class="ocr_word" title="bbox 1167 900 1354 940" lang="grc">
+        <span id="w_122_0" class="ocr_word" title="bbox 1167 900 1354 940">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐδιαίτατα</ins>
+            <ins class="alt" title="nlp 2.00">ἱδιαίτατα</ins>
+          </span>
+        </span>
+        <span id="w_122_1" class="ocr_word" title="bbox 1167 900 1354 940">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1390 902 1459 954" lang="grc">
@@ -670,11 +675,6 @@
         <span id="w_125" class="ocr_word" title="bbox 1656 901 1720 940" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 1752 915 1870 952" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰδίως,</ins>
           </span>
         </span>
       </span>
@@ -1771,18 +1771,13 @@
             <ins class="alt" title="nlp 1.00">οὐσιωδῶς,</ins>
           </span>
         </span>
-        <span id="w_342" class="ocr_word" title="bbox 1726 2078 1872 2132" lang="grc">
+        <span id="w_342_0" class="ocr_word" title="bbox 1726 2078 1872 2132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λαμβά-</ins>
+            <ins class="alt" title="nlp 2.00">λαμβάνεται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 193 2144 1872 2201">
-        <span id="w_343" class="ocr_word" title="bbox 193 2161 296 2186" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νεται</ins>
-          </span>
-        </span>
         <span id="w_344" class="ocr_word" title="bbox 340 2163 380 2187" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
